Fix top spacing of main section

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-    margin: auto 0;
+    margin-top: 4rem;
 }
 
 h1, h2, h3 {
